# coingecko-cache

./: .env  .gitignore  Cargo.toml  LICENSE-MIT  README.md  default.env  docker-compose.yml  scratch.sql
coingecko-cache-api/: Cargo.toml  sqlx-data.json
coingecko-cache-api/src/: base64.rs  convert.rs  main.rs  repo.rs
coingecko-cache-api/src/api/: convert.rs  mod.rs  models.rs  routes.rs
coingecko-cache-api/src/ext/: mod.rs
coingecko-cache-loader/: Cargo.toml  sqlx-data.json
coingecko-cache-loader/src/: coingecko.rs  main.rs  util.rs
coingecko-cache-loader/src/db/: convert.rs  mod.rs  models.rs  ops.rs
data/: .gitignore
data/snapshot_btcdom/coin_dominance/: activate.sh  loader.py
db/: init.sql
domfi_api/: Cargo.toml  sqlx-data.json
domfi_api/src/: base64.rs  convert.rs  historical.rs  main.rs  repo.rs
domfi_api/src/api/: convert.rs  mod.rs  models.rs  routes.rs
domfi_api/src/ext/: serde_with.rs
domfi_data/: Cargo.toml
domfi_data/src/: lib.rs
domfi_data/src/pg/: convert.rs  models.rs
domfi_data/src/pg/ops/: coin_dominance_entry.rs  mod.rs  provenance.rs
domfi_domain/: Cargo.toml
domfi_domain/src/: lib.rs
domfi_domain/src/ext/: bigdecimal.rs  mod.rs
domfi_domain/src/models/: financial_asset.rs  financial_asset_value.rs  financial_dominance_asset.rs  financial_dominance_kind.rs  financial_symbol.rs  financial_underlying.rs  mod.rs  ticker_display.rs
domfi_ext_serde/: Cargo.toml
domfi_ext_serde/src/: lib.rs
domfi_ext_tcp/: Cargo.toml
domfi_ext_tcp/src/: lib.rs
domfi_loader/: Cargo.toml
domfi_loader/src/: coingecko.rs  main.rs  util.rs
domfi_loader/src/db/: ops.rs
domfi_loader_historical/: Cargo.toml
domfi_loader_historical/src/: coingecko.rs  config.rs  main.rs
domfi_util/: Cargo.toml
domfi_util/src/: lib.rs
migrations/: 20201217085646_init.sql  20201217090512_coin_dominance_trigger_notify.sql
src/: main.rs  repo.rs
