[package]
name = "coingecko-cache-api"
version = "0.1.0"
authors = ["Josh Bowden <josbow@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
sqlx = { version = "0.3", default-features = false, features = [ "postgres", "json", "bigdecimal", "chrono", "uuid", "runtime-tokio", "macros" ] }

dotenv = "0.15.0"
log = "0.4"
pretty_env_logger = "0.4"
listenfd = "0.3"

snafu = "0.6"
futures = "0.3"
bigdecimal = { version = "0.2", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "0.8", features = ["serde", "v4"] }
base64 = "0.13"

serde = "1.0"
serde_json = { version = "1.0", features = ["raw_value"] }
serde_with = "1.5"


