[package]
name = "coingecko_cache_api"
version = "0.1.0"
authors = ["Josh Bowden <josh@ferrosync.io>"]
license = "MIT OR Apache-2.0"
edition = "2018"

homepage = "https://github.com/ferrosync/coingecko-cache"
repository = "https://github.com/ferrosync/coingecko-cache"
readme = "../README.md"
description = "A REST API that provides historical snapshots of CoinGecko coin dominance API"

[dependencies]
actix-web = {version = "3", features = ["rust-tls"] }
sqlx = { version = "0.4", default-features = false, features = [ "postgres", "json", "bigdecimal", "chrono", "uuid", "runtime-tokio-rustls", "macros", "offline" ] }

dotenv = "0.15.0"
log = "0.4"
pretty_env_logger = "0.4"
listenfd = "0.3"
net2 = "0.2"

snafu = "0.6"
futures = "0.3"
bigdecimal = { version = "0.2", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "0.8", features = ["serde", "v4"] }
base64 = "0.13"
hex = "0.4"

serde = "1.0"
serde_json = { version = "1.0", features = ["raw_value"] }
serde_with = { version = "1.5", features = ["hex"] }
serde-tuple-vec-map = "1.0"
