[package]
name = "coingecko-cache-loader"
version = "0.1.0"
authors = ["Josh Bowden <josbow@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.3", default-features = false, features = [ "postgres", "json", "bigdecimal", "chrono", "uuid", "runtime-tokio", "macros" ] }
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["full", "time"] }
futures = "0.3"
rand = "0.7"

dotenv = "0.15.0"
log = "0.4"
pretty_env_logger = "0.4"

bytes = "0.5"
bigdecimal = { version = "0.1", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "0.8", features = ["serde", "v4"] }
leaky-bucket = "0.8"

serde = "1.0"
serde_json = "1.0"
serde_with = "1.5"
