[package]
name = "domfi_data"
version = "0.1.0"
authors = ["Josh Bowden <josh@ferrosync.io>"]
edition = "2018"

[dependencies]
sqlx = { version = "0.4", default-features = false, features = [ "postgres", "json", "bigdecimal", "chrono", "uuid", "macros", "runtime-tokio-rustls", "offline" ] }
reqwest = { version = "0.10", default-features = false, features = ["json", "rustls-tls", "cookies", "json", "gzip", "brotli", "stream"] }

log = "0.4"
bytes = "0.5"
sha2 = "0.9"
base64 = "0.13"
snafu = "0.6.10"

bigdecimal = { version = "0.2", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "0.8", features = ["serde", "v4"] }

serde = "1"
serde_json = "1"
serde_with = "1"
