[package]
name = "domfi_domain"
version = "0.1.0"
authors = ["Josh Bowden <josh@ferrosync.io>"]
edition = "2018"

[dependencies]
snafu = "0.6.10"
lazy_static = "1.4.0"
derivative = "2.1.1"

num-bigint = "0.3"
num-integer = "0.1"
bigdecimal = { version = "0.2.0", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
serde = "1"
serde_with = "1"
serde_json = "1"
