[package]
name = "domfi_loader"
version = "0.1.0"
authors = ["Josh Bowden <josh@ferrosync.io>"]
license = "MIT OR Apache-2.0"
edition = "2018"

homepage = "https://github.com/ferrosync/coingecko-cache"
repository = "https://github.com/ferrosync/coingecko-cache"
readme = "../README.md"
description = "CoinGecko API poller for coin dominance and database loader for snapshots"

[dependencies]
domfi_util = { path = "../domfi_util" }
domfi_data = { path = "../domfi_data" }
domfi_ext_serde = { path = "../domfi_ext_serde", features = ["serde_deser_unquoted_bigdecimal"] }

sqlx = { version = "0.4", default-features = false, features = [ "postgres", "json", "bigdecimal", "chrono", "uuid", "macros", "runtime-tokio-rustls", "offline" ] }
reqwest = { version = "0.10", default-features = false, features = ["json", "rustls-tls", "cookies", "json", "gzip", "brotli", "stream"] }
tokio = { version = "0.2", features = ["full", "time"] }
futures = "0.3"
rand = "0.7"
sha2 = "0.9"
base64 = "0.13"

dotenv = "0.15.0"
log = "0.4"
pretty_env_logger = "0.4"
parse_duration = "2.1"
ctrlc = "3.1"

bytes = "0.5"
bigdecimal = { version = "0.2", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "0.8", features = ["serde", "v4"] }
leaky-bucket = "0.8"

serde = "1"
serde_json = { version = "1", features = ["arbitrary_precision"] }
serde_with = "1"
